<resources>
    <string name="app_name">DispatchApp</string>
    <string name="conn_title">DispatchApp: %s</string>
    <string name="conn_connecting">Connecting to server…</string>
    <string name="conn_disconnecting">Disconnecting…</string>
    <string name="conn_online">Online</string>
    <string name="conn_offline">Offline</string>
    <string name="conn_empty_roster">No contacts to show!</string>
    <string name="conn_reconnect">Next connection attempt in %d seconds.</string>
    <string name="conn_disconnected">Connection closed</string>
    <string name="conn_no_network">No network connection</string>
    <string name="Global_Exit">Exit</string>
    <string name="Global_authenticate_first">Please connect first</string>
    <string name="Global_JID_hint">user@localhost</string>
    <string name="Global_JID_malformed">Check address format!</string>
    <string name="StartupDialog_Title">Welcome to DispatchApp!</string>
    <string name="StartupDialog_Summary">Configure DispatchApp before you can use it. Please enter your ID and password.</string>
    <string name="StartupDialog_pwHint">Enter password</string>
    <string name="StartupDialog_pwrHint">Repeat password</string>
    <string name="StartupDialog_Username_title">User ID:</string>
    <string name="StartupDialog_passwd_title">Password:</string>
    <string name="StartupDialog_advanced">Advanced…</string>
    <string name="StartupDialog_create_new">Register new account</string>
    <string name="StartupDialog_error_password">Password does not match!</string>
    <string name="notification_message">Message from %s</string>
    <string name="notification_anonymous_message">Message received</string>
    <string name="notification_error">Error while sending message!</string>
    <string name="preftitle_notify">Message Notification</string>
    <string name="led_title">Blinking LED</string>
    <string name="led_summ">Blink phone LED on incoming messages</string>
    <string name="vibr_title">Vibration</string>
    <string name="vibr_summ">Vibrate on incoming messages</string>
    <string-array name="vibr_values_displayed">
        <item>Never</item>
        <item>System preference</item>
        <item>Always</item>
    </string-array>
    <string name="ringtone_title">Ringtone</string>
    <string name="ringtone_summ">Tone for incoming messages</string>
    <string name="ticker_title">Message preview</string>
    <string name="ticker_summ">Show sender and message in status bar</string>
    <string name="preftitle_boot">Startup Options</string>
    <string name="statuspopup_name">Set your status</string>
    <string name="showOffline_summ">Always show all contacts in the roster</string>
    <string name="showOffline_title">Show offline contacts</string>
    <string name="enableGroups_summ">Arrange your contacts by their groups</string>
    <string name="enableGroups_title">Show contact groups</string>
    <string name="foregroundService_summ">Keep xpressmessage in memory to ensure always-on connection (foreground service)</string>
    <string name="foregroundService_title">Statusbar icon</string>
    <string name="preftitle_debug">Debugging</string>
    <string name="smackdebug_summ">Packet and debug output via logcat (may contain personal information)</string>
    <string name="smackdebug_title">SMACK debugging</string>
    <string name="reportcrash_title">Send crash reports</string>
    <string name="reportcrash_summ">Send anonymous crash reports to developer</string>
    <string name="preftitle_app">Appearance</string>
    <string name="FontChat_title">Chat font size</string>
    <string name="FontChat_summ">Set chat font size</string>
    <string name="FontChat_dialog">Chat font size</string>
    <string name="pref_theme">Theme</string>
    <string-array name="pref_theme_entries">
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string name="preftitle_ui">Appearance</string>
    <string-array name="fontSizesChat">
        <item>small</item>
        <item>normal</item>
        <item>large</item>
        <item>huge</item>
    </string-array>
    <string name="Menu_addFriend">Add Contact</string>
    <string name="Menu_ShowOff">Show Offline</string>
    <string name="Menu_HideOff">Hide Offline</string>
    <string name="Menu_AccSettings">Edit Account</string>
    <string name="Menu_Settings">Settings</string>
    <string name="Menu_Status">Status</string>
    <string name="Menu_connect">Connect</string>
    <string name="Menu_disconnect">Disconnect</string>
    <string name="Menu_about">About xpressmessage</string>
    <string name="addFriend_Title">Add a Contact</string>
    <string name="addFriend_Summ">Please enter the Jabber ID of your friend, the
		desired screen name and choose their contact group!</string>
    <string name="addFriend_aliasHint">Screen name</string>
    <string name="addrosteritemaddgroupchoice">Add to a new group</string>
    <string name="NewGroup_EditTextField_Hint">Name for the new group</string>
    <string name="roster_contextmenu_title">Options for %s</string>
    <string name="roster_contextmenu_group_rename">Rename group</string>
    <string name="roster_contextmenu_contact_mark_all_as_read">Mark all messages as read</string>
    <string name="roster_contextmenu_contact_delete">Delete Contact</string>
    <string name="roster_contextmenu_contact_delmsg">Delete Chat History</string>
    <string name="roster_contextmenu_contact_open_chat">Open Chat</string>
    <string name="roster_contextmenu_contact_rename">Rename</string>
    <string name="roster_contextmenu_contact_request_auth">Request Authorization</string>
    <string name="roster_contextmenu_contact_change_group">Change Group</string>
    <string name="account_settings_login">Login Information</string>
    <string name="account_settings_title">Account Settings</string>
    <string name="account_options_title">Connecting Options</string>
    <string name="account_options_advanced">Advanced Options</string>
    <string name="connstartup_title">Connect at Startup</string>
    <string name="connstartup_summOn">Go online when xpressmessage is opened</string>
    <string name="connstartup_summOff">Do not automatically connect</string>
    <string name="carbons_title">Message Carbons (XEP-0280)</string>
    <string name="carbons_summ">Request message copies from your other client(s)</string>
    <string name="account_jabberID_title">Jabber ID</string>
    <string name="account_jabberID_sum">example: me@jabber.example.com</string>
    <string name="account_jabberID_dialog_title">Enter your Jabber ID:</string>
    <string name="account_jabberPW_title">Account Password</string>
    <string name="account_jabberPW_sum">Your Jabber account password</string>
    <string name="account_jabberPW_dialog_title">Enter password:</string>
    <string name="account_resource_title">Client Resource</string>
    <string name="account_resource_summ">Default: xpressmessage</string>
    <string name="account_resource_dialog_title">Enter your resource:</string>
    <string name="account_resource_hint">xpressmessage</string>
    <string name="account_prio_title">Client Priority</string>
    <string name="account_prio_summ">Default: 0 (allowed: -128 .. 127)</string>
    <string name="account_prio_error">Allowed values: -128 .. 127</string>
    <string name="account_prio_dialog_title">Enter your priority:</string>
    <string name="account_port_title">Server Port</string>
    <string name="account_port_sum">Default: 5222</string>
    <string name="account_port_dialog_title">Enter the server port:</string>
    <string name="account_port_hint">5222</string>
    <string name="account_customserver_title">Custom Server</string>
    <string name="account_customserver_summ">(Optional) alternative server hostname</string>
    <string name="account_customserver_dialog_title">Enter server hostname:</string>
    <string name="account_customserver_hint">host.example.com</string>
    <string name="require_ssl_title">Require SSL/TLS</string>
    <string name="require_ssl_summ">Always encrypt server connection</string>
    <string name="AddContact_SpinnerPrompt">Choose Group</string>
    <string name="setStatusmsgHint">Your status message</string>
    <string name="setStatusTitle">Set your status</string>
    <string name="RenameGroup_summ">Rename group %s to:</string>
    <string name="RenameGroup_title">Rename group</string>
    <string name="RenameEntry_summ">Rename %1$s (%2$s) to: </string>
    <string name="RenameEntry_title">Rename contact</string>
    <string name="MoveRosterEntryToGroupDialog_summ">Select a group from the spinner below</string>
    <string name="MoveRosterEntryToGroupDialog_title">Change group</string>
    <string name="deleteRosterItem_text">Really remove %1$s (%2$s)?</string>
    <string name="deleteRosterItem_title">Delete Contact</string>
    <string name="deleteChatHistory_text">Really remove all messages with %1$s (%2$s)?</string>
    <string name="deleteChatHistory_title">Delete Chat History</string>
    <string name="subscriptionRequest_text">%1$s wants to add you as a contact: \"%2$s\"</string>
    <string name="subscriptionRequest_title">Subscription Request</string>
    <string name="chat_from_me">Me:</string>
    <string name="toast_connectfail_message">Connection closed!</string>
    <string name="toast_stored_offline">The message has been stored for transmission.</string>
    <string name="chat_enterMsgHint">Enter message</string>
    <string name="chatmenu_resend">Resend</string>
    <string name="AboutDialog_title">About xpressmessage</string>
    <string name="AboutDialog_DevelopersTitle">Developers</string>
    <string name="AboutDialog_DevelopersText">Contact the developers at http://xpressmessage.org or on freenode IRC: #xpressmessage</string>
    <string name="AboutDialog_LicenceTitle">Licensing</string>
    <string name="AboutDialog_Vote">Give Feedback</string>
    <string name="AboutDialog_LicenceText">		This program is free software; you can redistribute
		it and/or
		modify it under the terms of the GNU General Public License
		version 2
		as published by the Free Software Foundation.
		Link:
		http://www.gnu.org/licenses/gpl-2.0.html\n
		\n
		Parts of this software are
		provided under the MIT License:\n
		\n
		Copyright © 2009 Mads
		Kristiansen, Nullwire ApS\n
		\n
		Permission is hereby granted, free of
		charge, to any person obtaining
		a copy
		of this software and associated
		documentation files (the
		"Software"), to deal
		in the Software without
		restriction, including
		without limitation the rights
		to use, copy,
		modify, merge, publish,
		distribute, sublicense, and/or sell
		copies of
		the Software, and to
		permit persons to whom the Software is
		furnished to
		do so, subject to
		the following conditions:
		\n
		The above copyright notice
		and this permission notice shall be
		included in all
		copies or
		substantial portions of the Software.
		\n
		THE SOFTWARE IS PROVIDED "AS
		IS", WITHOUT WARRANTY OF ANY KIND,
		EXPRESS OR
		IMPLIED, INCLUDING BUT NOT
		LIMITED TO THE WARRANTIES OF
		MERCHANTABILITY,
		FITNESS FOR A PARTICULAR
		PURPOSE AND NONINFRINGEMENT.
		IN NO EVENT SHALL THE
		AUTHORS OR COPYRIGHT
		HOLDERS BE LIABLE FOR ANY
		CLAIM, DAMAGES OR OTHER
		LIABILITY, WHETHER IN
		AN ACTION OF CONTRACT,
		TORT OR OTHERWISE, ARISING FROM,
		OUT OF OR IN
		CONNECTION WITH THE
		SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
		SOFTWARE.</string>
    <string name="status_available">Online</string>
    <string name="status_away">Away</string>
    <string name="status_chat">Free for chat</string>
    <string name="status_dnd">Do not disturb</string>
    <string name="status_xa">Not available</string>
    <string name="status_offline">Offline</string>
    <string name="translator_credits">translator-credits</string>
    <string name="default_group">General</string>
    <string name="all_contacts_group">All contacts</string>
</resources>