<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="?attr/dialogTextColor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7sp"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            style="?attr/dialogTextColor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon"
            android:drawablePadding="10sp"
            android:padding="10sp"
            android:text="@string/AboutDialog_DevelopersTitle"
            android:textSize="20sp" />

        <TextView
            style="?attr/dialogTextColor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:padding="2sp"
            android:text="@string/AboutDialog_DevelopersList" />

        <TextView
            style="?attr/dialogTextColor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:padding="2sp"
            android:text="@string/AboutDialog_DevelopersText" />

        <TextView
            style="?attr/dialogTextColor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/gnuicon"
            android:drawablePadding="15sp"
            android:padding="10sp"
            android:text="@string/AboutDialog_LicenceTitle"
            android:textSize="20sp" />

        <TextView
            style="?attr/dialogTextColor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:padding="2sp"
            android:text="@string/AboutDialog_LicenceText" />

        <TextView
            android:id="@+id/translator_credits"
            style="?attr/dialogTextColor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:padding="2sp"
            android:text="@string/translator_credits" />
    </LinearLayout>

</ScrollView>