<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/statusLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    android:paddingEnd="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingStart="10dp"
    android:paddingTop="10dp" >

    <TextView
        android:id="@+id/StartupDialog_Summary"
        style="?attr/dialogTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_launcher"
        android:drawablePadding="10sp"
        android:drawableStart="@drawable/ic_launcher"
        android:focusable="true"
        android:padding="10sp"
        android:text="@string/StartupDialog_Summary" />

    <ScrollView
        android:id="@+id/StartupDialog_ScrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/AddContact_ScrollLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/StartupDialog_Username_title"
                style="?attr/dialogTextColor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="2sp"
                android:text="@string/StartupDialog_Username_title" />

            <org.yaxim.androidclient.widget.AutoCompleteJidEdit
                android:id="@+id/StartupDialog_JID_EditTextField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/StartupDialog_Username_title"
                android:gravity="left"
                android:hint="@string/Global_JID_hint"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxWidth="200sp"
                android:padding="10sp"
                android:singleLine="true"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/StartupDialog_passwd_title"
                style="?attr/dialogTextColor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="2sp"
                android:text="@string/StartupDialog_passwd_title" />

            <EditText
                android:id="@+id/StartupDialog_PASSWD_EditTextField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/StartupDialog_passwd_title"
                android:gravity="left"
                android:hint="@string/StartupDialog_pwHint"
                android:maxWidth="200sp"
                android:padding="10sp"
                android:password="true"
                android:singleLine="true"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/create_account"
                style="?attr/dialogTextColor"
                android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/StartupDialog_create_new" />

            <EditText
                android:id="@+id/startup_password_repeat"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/StartupDialog_passwd_title"
                android:gravity="left"
                android:hint="@string/StartupDialog_pwrHint"
                android:maxWidth="200sp"
                android:padding="10sp"
                android:password="true"
                android:singleLine="true"
                android:textSize="18sp"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>