<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/statusLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/Addcontact_Title"
            style="?attr/dialogTextColor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/addFriend_Summ" />

        <org.yaxim.androidclient.widget.AutoCompleteJidEdit
            android:id="@+id/AddContact_EditTextField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="left"
            android:hint="@string/Global_JID_hint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxWidth="200sp"
            android:singleLine="true"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/AddContactAlias_EditTextField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="left"
            android:hint="@string/addFriend_aliasHint"
            android:maxWidth="200sp"
            android:singleLine="true"
            android:textSize="18sp" />

        <org.yaxim.androidclient.dialogs.GroupNameView
            android:id="@+id/AddRosterItem_GroupName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </LinearLayout>

</ScrollView>